Add fast and normal inference modes
